--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,89 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  background-color: aliceblue;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
-
+/* 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+.right {
+  float: right;
+}
+.left {
+  float: left;
+}
+.results {
+  display: flex;
+  flex-wrap: wrap;
+}
+.beer-image {
+  margin-top: 20px;
+  margin-left: 20px;
+  width: inherit;
+  height: inherit;
+}
+
+.card {
+  margin: 10px;
+  width: 220px;
+  height: 220px;
+  overflow: hidden;
+}
+.beer-details {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.img-container {
+  display: block;
+  height: auto;
+  width: 40%;
+}
+.beer-name {
+  display: block;
+  width: 60%;
+}
+.name {
+  font-size: 1.2em;
+  color: #302f2f;
+  font-weight: bold;
+}
+
+.myrow {
+  padding: 5px;
+  width: 100%;
+  display: inline-block;
+  height: 20px;
+}
+.icon {
+  margin: 5px;
+  font-size: 1.2em;
+  cursor: pointer;
+}
+.beer-desc {
+  margin: 5px;
+  width: auto;
+  height: 100px;
+  overflow: hidden;
+}
+.loader {
+  padding: 100px;
+  margin-left: 30%;
+  width: 80px;
+  height: 80px;
+}
+.loading {
+  width: inherit;
+  height: inherit;
+}
+.fas {
+  color: #ff0000;
 }
